--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header>
     <h1>Привет, это мой первый сайт-портфолио.</h1>
-    <p>Всю свою жизнь я увлекаюсь компьютером и все что с этим связано.</p>
+    <p>Всю свою жизнь я увлекаюсь компьютером и всем, что с этим связано.</p>
     <p>Всегда хотел изучать программирование и сейчас учусь на эту специальность.</p>
     <p>Мне нравится учиться и делать свои проекты.</p>
   </header>
@@ -23,14 +23,14 @@
   <section id="projects">
     <h2>Вот несколько из моих проектов:</h2>
     <div class="project">
-      <h3>Проект"Черепашка"</h3>
+      <h3>Проект "Черепашка"</h3>
       <img src="img/project1.jpg" alt="Проект 1">
-      <p>Программа написанная на C# в Visual Studia. Черепашка выполняется команды рисовать с движением вперед, развороты налево и направо, а так же меняет цвет линии.</p>
+      <p>Программа написанная на C# в Visual Studia. Черепашка выполняет команды рисовать с движением вперед, развороты налево и направо, а также меняет цвет линии.</p>
     </div>
     <div class="project">
       <h3>Проект "Шар 8"</h3>
       <img src="img/project2.jpg" alt="Проект 2">
-      <p>Маленькая программа написанная на языке Пайтон. Полностью повторяющая "безделушку" Шар 8.</p>
+      <p>Маленькая программа, написанная на языке Пайтон. Полностью повторяющая "безделушку" Шар 8.</p>
     </div>
     <div class="project">
       <h3>Проект "Угадай число"</h3>
@@ -41,7 +41,7 @@
 
   <section id="languages">
     <h2>Изученные языки программирования</h2>
-    <p>С нашей группой мы изучили малую часть таких языков как ...</p>
+    <p>С нашей группой мы изучили малую часть таких языков как C#, Пайтон, HTML.</p>
   </section>
 
   <footer>
