--- a/index.html
+++ b/index.html
@@ -20,34 +20,41 @@
     <p>Мне нравится учиться и делать свои проекты.</p>
   </header>
 
+  <section id="biography">
+    <h2>Биография</h2>
+    <p>Меня зовут Данил. Я студент и изучаю программирование. Мой интерес к компьютерам и программированию начался ещё в детстве, и с тех пор я стараюсь развивать свои навыки в этой области.</p>
+    <p>Я учусь работать с различными языками программирования, такими как C#, Python и HTML. Мои текущие проекты включают создание небольших программ, которые помогают мне практиковаться и улучшать свои навыки.</p>
+    <p>Я стремлюсь стать профессионалом в области разработки программного обеспечения и создания веб-приложений. Мне нравится учиться новым технологиям и применять их для решения реальных задач.</p>
+  </section>
+
   <section id="projects">
     <h2>Вот несколько из моих проектов:</h2>
     <div class="project">
       <h3>Проект "Черепашка"</h3>
       <img src="img/project1.jpg" alt="Проект 1">
-      <p>Программа написанная на C# в Visual Studia. Черепашка выполняет команды рисовать с движением вперед, развороты налево и направо, а также меняет цвет линии.</p>
+      <p>Программа написанная на C# в Visual Studio. Черепашка выполняет команды рисовать с движением вперед, развороты налево и направо, а также меняет цвет линии.</p>
     </div>
     <div class="project">
       <h3>Проект "Шар 8"</h3>
       <img src="img/project2.jpg" alt="Проект 2">
-      <p>Маленькая программа, написанная на языке Пайтон. Полностью повторяющая "безделушку" Шар 8.</p>
+      <p>Маленькая программа, написанная на языке Python. Полностью повторяющая "безделушку" Шар 8.</p>
     </div>
     <div class="project">
       <h3>Проект "Угадай число"</h3>
       <img src="img/project3.jpg" alt="Проект 3">
-      <p>Такая же маленькая программа на Пайтон. Игрок вписывает число, а программа говорит - "меньше" или "больше".</p>
+      <p>Такая же маленькая программа на Python. Игрок вписывает число, а программа говорит - "меньше" или "больше".</p>
     </div>
   </section>
 
   <section id="languages">
     <h2>Изученные языки программирования</h2>
-    <p>С нашей группой мы изучили малую часть таких языков как C#, Пайтон, HTML.</p>
+    <p>С нашей группой мы изучили малую часть таких языков как C#, Python, HTML.</p>
   </section>
 
   <footer>
     <p>Мне нравится учиться и через время я стану специалистом</p>
     <div class="contact-icons">
-        <p> Связь со мной:</p>
+        <p>Связь со мной:</p>
       <a href="https://t.me/ebynpc"><img src="img/telegram-icon.png" alt="Telegram"></a>
     </div>
   </footer>
