--- a/index.html
+++ b/index.html
@@ -14,17 +14,21 @@
   </div>
 
   <header>
-    <h1>Привет, это мой первый сайт-портфолио.</h1>
+    <h1>Привет, меня зовут Данил Ревенко, это мой первый сайт-портфолио.</h1>
     <p>Всю свою жизнь я увлекаюсь компьютером и всем, что с этим связано.</p>
     <p>Всегда хотел изучать программирование и сейчас учусь на эту специальность.</p>
     <p>Мне нравится учиться и делать свои проекты.</p>
   </header>
 
-  <section id="biography">
+  <section id="biographys">
     <h2>Биография</h2>
-    <p>Меня зовут Данил. Я студент и изучаю программирование. Мой интерес к компьютерам и программированию начался ещё в детстве, и с тех пор я стараюсь развивать свои навыки в этой области.</p>
-    <p>Я учусь работать с различными языками программирования, такими как C#, Python и HTML. Мои текущие проекты включают создание небольших программ, которые помогают мне практиковаться и улучшать свои навыки.</p>
-    <p>Я стремлюсь стать профессионалом в области разработки программного обеспечения и создания веб-приложений. Мне нравится учиться новым технологиям и применять их для решения реальных задач.</p>
+    <div class="biography">
+      <img src="img/your-image.jpg" alt="Фото лица" class="profile-image">
+      <p>Мне 19 лет. Я родился в прекрасном городе Енакиево. Учился в колледже на экономиста. Сейчас я поступил в университет.</p>
+      <p>Я студент и изучаю программирование. Мой интерес к компьютерам и программированию начался ещё в детстве, и с тех пор я стараюсь развивать свои навыки в этой области.</p>
+      <p>Я учусь работать с различными языками программирования, такими как C#, Python и HTML. Мои текущие проекты включают создание небольших программ, которые помогают мне практиковаться и улучшать свои навыки.</p>
+      <p>Я стремлюсь стать профессионалом в области разработки программного обеспечения и создания веб-приложений. Мне нравится учиться новым технологиям и применять их для решения реальных задач.</p>
+    </div>  
   </section>
 
   <section id="projects">
